Super agents mobile part

--- a/SCSS/Run Forest Run/app/index.html
+++ b/SCSS/Run Forest Run/app/index.html
@@ -50,17 +50,57 @@
                 <input class="search" type="search" placeholder="Buscar por Ubicacion">
                 <img class="image" src="img/lupa.png" >
         </div>
-        <div class="film__block">
-            <div class="film_chuck__norris">
-                <h2>Chuck Norris Bodyguards</h2>
-                <p><img class="image" src="img/chuckNorris.jpg" width="100" height="150">
+        <div class="agent__block">
+            <div class="single__agent">
+                <h2 class="agent"><img calss="certified" src="img/certified.png" > Chuck Norris Bodyguards</h2>
+                <p><img class="image" src="img/chuckNorris.jpg">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     Fusce eleifend vel enim ac lacinia. Phasellus ac nisl id velit 
                     tristique accumsan nec at enim. Etiam posuere tellus ut ligula 
                     feugiat auctor. Morbi ut quam aliquet, viverra purus in, convallis ante.
                 </p>
-                <button type="button">Contratar</button>
+                <div class="footer__agent">
+                        <h2 class="price"> Desde: $15/ 12 horas</h2>
+                        <button class="btn" type="button">Contratar</button>
+                </div>
             </div>
+
+            <div class="single__agent">
+                    <h2 class="agent"><img calss="certified" src="img/certified.png" > Chuck Norris Bodyguards</h2>
+                    <p><img class="image" src="img/chuckNorris.jpg">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Fusce eleifend vel enim ac lacinia. Phasellus ac nisl id velit 
+                        tristique accumsan nec at enim. Etiam posuere tellus ut ligula 
+                        feugiat auctor. Morbi ut quam aliquet, viverra purus in, convallis ante.
+                    </p>
+                    <div class="footer__agent">
+                            <h2 class="price"> Desde: $15/ 12 horas</h2>
+                            <button class="btn" type="button">Contratar</button>
+                    </div>
+                </div>
+
+
+                <div class="single__agent">
+                        <h2 class="agent"><img calss="certified" src="img/certified.png" > Chuck Norris Bodyguards</h2>
+                        <p><img class="image" src="img/chuckNorris.jpg">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Fusce eleifend vel enim ac lacinia. Phasellus ac nisl id velit 
+                            tristique accumsan nec at enim. Etiam posuere tellus ut ligula 
+                            feugiat auctor. Morbi ut quam aliquet, viverra purus in, convallis ante.
+                        </p>
+                        <div class="footer__agent">
+                                <h2> Desde: $15/ 12 horas</h2>
+                                <button class="btn" type="button">Contratar</button>
+                        </div>
+                    </div>
+
+        </div>
+
+        
+        <footer class="footer__block">
+                <p>Desarrollado por Akurey.com Todos los derechos reservados.</p>
+                <h5>Términos y Condiciones</h5>
+              </footer>
             
 
         <script src="js/vendor/jquery-1.10.1.min.js"></script>
