--- a/SCSS/Run Forest Run/app/index.html
+++ b/SCSS/Run Forest Run/app/index.html
@@ -104,6 +104,32 @@
                         <button class="btn" type="button">Contratar</button>
                 </div>
             </div>
+            <div class="single__agent">
+                <h2 class="agent"><img calss="certified" src="img/certified.png" > Chuck Norris Bodyguards</h2>
+                <p><img class="image" src="img/chuckNorris.jpg">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Fusce eleifend vel enim ac lacinia. Phasellus ac nisl id velit 
+                    tristique accumsan nec at enim. Etiam posuere tellus ut ligula 
+                    feugiat auctor. Morbi ut quam aliquet, viverra purus in, convallis ante.
+                </p>
+                <div class="footer__agent">
+                        <h2 class="price"> Desde: $15/ 12 horas</h2>
+                        <button class="btn" type="button">Contratar</button>
+                </div>
+            </div>
+            <div class="single__agent">
+                <h2 class="agent"><img calss="certified" src="img/certified.png" > Chuck Norris Bodyguards</h2>
+                <p><img class="image" src="img/chuckNorris.jpg">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Fusce eleifend vel enim ac lacinia. Phasellus ac nisl id velit 
+                    tristique accumsan nec at enim. Etiam posuere tellus ut ligula 
+                    feugiat auctor. Morbi ut quam aliquet, viverra purus in, convallis ante.
+                </p>
+                <div class="footer__agent">
+                        <h2 class="price"> Desde: $15/ 12 horas</h2>
+                        <button class="btn" type="button">Contratar</button>
+                </div>
+            </div>
         </div>
 
         
