Desktop responsive completed

--- a/SCSS/Run Forest Run/app/index.html
+++ b/SCSS/Run Forest Run/app/index.html
@@ -48,7 +48,7 @@
     <div class="main__block">
     </div>
     <div class="search__block">
-        <h1>Los mejores agentes de seguridad</h1>
+        <h1>Los Mejores agentes de seguridad</h1>
         <input class="search" type="search" placeholder="Buscar por Ubicacion">
         <img class="image" src="img/lupa.png">
     </div>
