--- a/SCSS/Run Forest Run/app/index.html
+++ b/SCSS/Run Forest Run/app/index.html
@@ -17,14 +17,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="" />
-
     <meta name="viewport" content="width=device-width" />
-
     <title></title>
-
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
-
     <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 
@@ -39,7 +35,7 @@
                 <ul class="header__nav__items">
                     <li><a href="#">Directorios de agentes</a></li>
                     <li><a href="#">Contacto</a></li>
-                    <li><a href="#">ingresar</a></li>
+                    <li><a href="#">Ingresar</a></li>
                 </ul>
             </nav>
         </div>
