--- a/SCSS/Run Forest Run/app/index.html
+++ b/SCSS/Run Forest Run/app/index.html
@@ -5,7 +5,13 @@
     Intelligent Sense
     Use is subject to license terms.
     Filename: index.html
+    
+    Author:      cviquez@intelligentsense.com
+    Date:        03/05/2019
+    Description: Run Forest Run using AJAX
+ 
 -->
+
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -49,8 +55,8 @@
     </div>
     <div class="search">
         <h1 class="search__title">Los Mejores agentes de seguridad</h1>
-        <input class="search__input" type="search" placeholder="Buscar por Ubicacion">
-        <img class="search__image" src="img/lupa.png">
+        <input class="search__input" id="search_input" type="search" placeholder="Buscar por Ubicacion" onkeypress="return search_agent()">
+        <img class="search__image" src="img/lupa.png" onclick="search_agent()">
     </div>
     <div class="agent-container" id="agent-container">
         <script type="mustache/x-tmpl" id="agent-tmpl">
@@ -73,64 +79,7 @@
                 </div>
             {{/companies}}
         </script>
-
-        <script>
-            //Create Promise
-            var insert_agent = new Promise((resolve, reject) => {
-                const request = new XMLHttpRequest();
-                request.onreadystatechange = function () {
-                    if (this.status === 200 && this.readyState == 4) { //200 means that the request has succeeded.
-                        resolve(request.response);
-                    }
-                }
-                request.open('GET', 'https://api.myjson.com/bins/uptto', true);
-                request.send();
-            });
-            var tmpl = document.getElementById("agent-tmpl").innerHTML;
-            //Consume Promise
-            var obtain_agent = function () {
-                insert_agent
-                    .then(function(data) {
-                        var box = document.getElementById("agent-container");
-                        var html = Mustache.to_html(tmpl, JSON.parse(data));
-                        box.innerHTML = html;
-                    }).catch((error) => {
-                        console.log(error.message);
-                    });
-            }
-            obtain_agent();
-
-
-        </script>
-
-
     </div>
-
-
-    <script>
-
-        const promise = new Promise((resolve, reject) => {
-            const request = new XMLHttpRequest();
-            request.open('GET', 'https://api.myjson.com/bins/uptto', true);
-            request.onload = () => {
-                if (request.status === 200) { //200 means that the request has succeeded.
-                    resolve(request.response);
-                    console.log(request.response);
-                } else {
-                    reject(Error(request.statusText));
-                }
-            }
-        });
-
-        promise.then((data) => {
-            console.log('Got data! Promise fulfilled.');
-            document.body.textContent = JSON.parse(data).companies.name;
-        }, (error) => {
-            console.log('Promise reject');
-            console.log(error.message);
-        });
-    </script>
-
 
     <footer class="footer">
         <p class="footer__develop">Desarrollado por Akurey.com Todos los derechos reservados.</p>
@@ -140,6 +89,8 @@
 
     <script src="js/vendor/jquery-1.10.1.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/script.js"></script>
+
 
 
 
